dev/manifests/3rd-party/jaeger/agent-ds.yaml
---
# Source: jaeger/templates/agent-ds.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: jaeger-tracing-agent
  labels:
    helm.sh/chart: jaeger-1.0.2
    app.kubernetes.io/name: jaeger
    app.kubernetes.io/instance: jaeger
    app.kubernetes.io/version: "1.53.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: agent
  annotations:
    pia-team.com/role: pia.k8s.jaeger/0.5.0
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: jaeger
      app.kubernetes.io/instance: jaeger
      app.kubernetes.io/component: agent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jaeger
        app.kubernetes.io/instance: jaeger
        app.kubernetes.io/component: agent
    spec:
      securityContext: {}
      dnsPolicy: ClusterFirst
      serviceAccountName: jaeger-tracing-agent
      imagePullSecrets:
      - name: reg-creds
      containers:
      - name: jaeger-tracing-agent
        securityContext: {}
        image: 
          europe-docker.pkg.dev/dnext-io/ghcr-dnext-technology/dnext-technology/3rd-party/library/jaeger-agent:1.54
        imagePullPolicy: IfNotPresent
        args:
        ports:
        - name: zipkin-compact
          containerPort: 5775
          protocol: UDP
        - name: jaeger-compact
          containerPort: 6831
          protocol: UDP
        - name: jaeger-binary
          containerPort: 6832
          protocol: UDP
        - name: http
          containerPort: 5778
          protocol: TCP
        - name: admin
          containerPort: 14271
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: admin
        readinessProbe:
          httpGet:
            path: /
            port: admin
        resources: {}
        volumeMounts:
      volumes:
