dev/manifests/3rd-party/jaeger/ingester-deploy.yaml
---
# Source: jaeger/templates/ingester-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger-ingester
  labels:
    helm.sh/chart: jaeger-1.0.2
    app.kubernetes.io/name: jaeger
    app.kubernetes.io/instance: jaeger
    app.kubernetes.io/version: "1.53.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: ingester
  annotations:
    pia-team.com/role: pia.k8s.jaeger/0.5.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jaeger
      app.kubernetes.io/instance: jaeger
      app.kubernetes.io/component: ingester
  template:
    metadata:
      annotations:
      labels:
        app.kubernetes.io/name: jaeger
        app.kubernetes.io/instance: jaeger
        app.kubernetes.io/component: ingester
    spec:
      serviceAccountName: jaeger-ingester
      securityContext: {}
      imagePullSecrets:
      - name: reg-creds
      containers:
      - name: jaeger-ingester
        securityContext: {}
        image: 
          europe-docker.pkg.dev/dnext-io/ghcr-dnext-technology/dnext-technology/3rd-party/library/jaeger-ingester:1.54
        imagePullPolicy: IfNotPresent
        args:
        ports:
        - containerPort: 14270
          name: admin
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: admin
        livenessProbe:
          httpGet:
            path: /
            port: admin
        resources: {}
        volumeMounts:
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
  progressDeadlineSeconds: 3600
