dev/manifests/3rd-party/jaeger/ingester-svc.yaml
---
# Source: jaeger/templates/ingester-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger-ingester
  labels:
    helm.sh/chart: jaeger-1.0.2
    app.kubernetes.io/name: jaeger
    app.kubernetes.io/instance: jaeger
    app.kubernetes.io/version: "1.53.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: ingester
  annotations:
    pia-team.com/role: pia.k8s.jaeger/0.5.0
spec:
  ports:
  - name: admin
    port: 14270
    targetPort: admin
  selector:
    app.kubernetes.io/name: jaeger
    app.kubernetes.io/instance: jaeger
    app.kubernetes.io/component: ingester
  type: ClusterIP
