dev/manifests/3rd-party/jaeger/svc.yaml
---
# Source: jaeger/charts/kafka/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger-kafka
  namespace: "hornet"
  labels:
    app.kubernetes.io/instance: jaeger
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kafka
    app.kubernetes.io/version: 3.6.1
    helm.sh/chart: kafka-26.6.2
    app.kubernetes.io/component: kafka
  annotations:
    pia-team.com/role: pia.k8s.jaeger/0.5.0
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
  - name: tcp-client
    port: 9092
    protocol: TCP
    targetPort: client
    nodePort:
  selector:
    app.kubernetes.io/instance: jaeger
    app.kubernetes.io/name: kafka
    app.kubernetes.io/part-of: kafka
