dev/manifests/3rd-party/jaeger/query-ing.yaml
---
# Source: jaeger/templates/query-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-query
  labels:
    helm.sh/chart: jaeger-1.0.2
    app.kubernetes.io/name: jaeger
    app.kubernetes.io/instance: jaeger
    app.kubernetes.io/version: "1.53.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: query
  annotations:
    pia-team.com/family: orbitant
    pia-team.com/role: pia.k8s.jaeger/0.5.0
spec:
  ingressClassName: nginx
  rules:
  - host: jaeger.orbitant.192.168.21.10.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jaeger-query
            port:
              number: 80
